# Nadini

./: .env.production.example  .gitignore  404.html  Makefile  README.md  _redirects  docker-compose.prod.yml  docker-compose.yml  index.html  manifest.json  nginx.conf  nginx.prod.conf  sw.js
app/: audio-capture.js  auth.js  config.js  dashboard.html  join.html  (+19 more)
audio-gateway/: Dockerfile  pyproject.toml
audio-gateway/app/: edge.py  main.py
auth-service/: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
auth-service/app/: main.py
auth-service/app/api/: deps.py  routes_admin.py  routes_auth.py  routes_compliance.py  routes_misc.py  schemas.py
auth-service/app/compliance/: __init__.py  audit.py  contracts.py  disclosure.py  literacy.py  risk_tier.py
auth-service/app/core/: config.py  jwt.py  logging.py  security.py
auth-service/app/db/: models.py  session.py
auth-service/app/domain/: errors.py
auth-service/app/mailer/: __init__.py  base.py  console.py  resend_mailer.py
auth-service/app/mailer/templates/: magic_link_de.html  magic_link_de.subject.txt  magic_link_de.txt  magic_link_en.html  magic_link_en.subject.txt  magic_link_en.txt  magic_link_fr.html  magic_link_fr.subject.txt  magic_link_fr.txt
auth-service/app/services/: magic_link_service.py  rate_limiter.py
auth-service/migrations/: env.py
auth-service/migrations/versions/: 0001_initial.py  0002_user_roles.py  0003_tenant_onboarding.py
auth-service/scripts/: generate_keys.sh
auth-service/tests/: conftest.py  test_disclosure_flow.py  test_magic_link_flow.py
meeting-service/: Dockerfile  pyproject.toml
meeting-service/app/: main.py
meeting-service/app/api/: deps.py  routes_incidents.py  routes_meetings.py  routes_misc.py  routes_providers.py  routes_transcript.py  routes_ws.py  schemas.py
meeting-service/app/compliance/: audit.py  human_oversight.py
meeting-service/app/core/: config.py  jwt_verifier.py  logging.py  metrics.py  sentry.py
meeting-service/app/db/: models.py  session.py
meeting-service/app/domain/: errors.py
meeting-service/app/services/: glossary.py  lang_detect.py  mailer.py  meeting_service.py  rate_limiter.py  sentiment.py  summarizer.py  transcript_service.py  translation_service.py  ws_manager.py
meeting-service/app/translation/: base.py  context.py  health_monitor.py  quality.py  registry.py  router.py
meeting-service/app/translation/providers/: argos_provider.py  azure_provider.py  claude_provider.py  deepl_provider.py  deepseek_provider.py  google_provider.py  mistral_mock.py  nllb_provider.py  openai_provider.py  papago_provider.py  seed_mock.py
meeting-service/migrations/: env.py
meeting-service/migrations/versions/: 0001_meetings.py  0002_scheduling.py  0003_translation_routing.py  0004_premium_providers.py  0005_routing_config.py  0006_additional_providers.py  0007_provider_api_keys.py  0008_incidents.py
(+12 files in other folders)
