[project]
name = "nadini-audio-gateway"
version = "0.1.0"
description = "Audio-Gateway: Whisper ASR + Auto-Spracherkennung für Nadini"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "websockets>=13.0",
    "faster-whisper>=1.0.0",
    "numpy>=1.26.0",
    "httpx>=0.27.2",
    "python-jose[cryptography]>=3.3.0",
    "structlog>=24.4.0",
]

[tool.setuptools.packages.find]
include = ["app*"]
