[project]
name = "nadini-auth"
version = "0.1.0"
description = "Auth Service mit Magic Link Login für die KI-Dolmetsch-Plattform"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "asyncpg>=0.30.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "alembic>=1.14.0",
    "redis[hiredis]>=5.2.0",
    "python-jose[cryptography]>=3.3.0",
    "cryptography>=43.0.0",
    "email-validator>=2.2.0",
    "httpx>=0.27.2",
    "jinja2>=3.1.4",
    "structlog>=24.4.0",
    "prometheus-client>=0.21.0",
    "python-multipart>=0.0.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.3",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "httpx>=0.27.2",
    "testcontainers[postgres,redis]>=4.8.2",
    "ruff>=0.7.4",
    "mypy>=1.13.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM", "ASYNC"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --strict-markers"

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
